Display total result count
Signed-off-by: Joseph Fusco <jfusco@masonite.com>

--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -97,6 +97,12 @@ $gutter: 18px;
     margin: 0;
     padding-left: $gutter;
   }
+
+  .search-results-info {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    min-height: 40px;
+  }
 }
 
 .fancybox-container {
