--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -126,6 +126,16 @@ $gutter: 18px;
     height: 20px;
     margin: 0 8px;
   }
+
+  &.added {
+    .tile__image {
+      opacity: 0.18;
+    }
+
+    .tile__title {
+      opacity: 0.4;
+    }
+  }
 }
 
 .blur-up:not(.lazyloaded) {
