--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -1,30 +1,9 @@
 $gutter: 18px;
-
-#widen-media {
-  .search-toolbar {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-  }
-
-  .search-box {
-    display: flex;
-    align-items: center;
-  }
-
-  .search-meta {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-    margin-right: $gutter;
-  }
-}
-
-#widen-search-submit {
-  vertical-align: middle;
-}
+$green: #99c220;
+$breakpoint-lg: 1500px;
+$breakpoint-md: 1300px;
+$breakpoint-sm: 1000px;
+$breakpoint-xs: 500px;
 
 #widen-search-input {
   width: 330px;
@@ -39,57 +18,111 @@ $gutter: 18px;
   float: none;
 }
 
-#widen-search-results {
-  display: block;
-  width: 100%;
-  -webkit-font-smoothing: antialiased;
+.toolbar {
+  padding: 1em 0;
+  display: flex;
+  justify-content: flex-end;
 
-  .tiles {
+  .tablenav-pages {
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 0;
-    margin-left: ($gutter * -1);
+    align-items: center;
   }
 
-  .tile {
-    width: 25%;
-    padding-left: $gutter;
-    margin-bottom: $gutter;
-    box-sizing: border-box;
-    justify-content: space-between;
+  .displaying-num {
+    margin-right: auto;
+  }
+}
 
-    > a {
-      text-decoration: none;
+.button.add-to-library {
+  margin: 0;
+  display: block;
+}
+
+.tiles {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 0;
+  margin-left: ($gutter * -1);
+  justify-content: space-between;
+}
+
+.tile {
+  padding-left: $gutter;
+  margin: 0 auto $gutter;
+  box-sizing: border-box;
+  justify-content: space-between;
+  width: percentage(1 / 5);
+
+  @media (max-width: $breakpoint-lg) {
+    width: percentage(1 / 4);
+  }
+
+  @media (max-width: $breakpoint-md) {
+    width: percentage(1 / 3);
+  }
+
+  @media (max-width: $breakpoint-sm) {
+    width: percentage(1 / 2);
+  }
+
+  @media (max-width: $breakpoint-xs) {
+    width: 100%;
+  }
+
+  figure {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  &__wrapper {
+    text-decoration: none;
+    backface-visibility: hidden;
+    padding-top: $gutter;
+    padding-bottom: $gutter;
+    display: block;
+    border-radius: 3px;
+    background-color: #fff;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+    border: 1px solid #e5e5e5;
+    position: relative;
+    overflow: hidden;
+
+    .added &::before {
+      position: absolute;
+      top: 25px;
+      left: -35px;
+      content: "Added";
+      background-color: $green;
+      color: #fff;
+      width: 150px;
+      transform: rotate(-45deg);
+      text-align: center;
+      z-index: 1;
+      padding: 0.5em 0;
+      letter-spacing: 0.02em;
       backface-visibility: hidden;
-      padding-top: $gutter;
-      padding-bottom: $gutter;
-      display: block;
-      border-radius: 3px;
-      background-color: #fff;
-      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
-      border: 1px solid #e5e5e5;
     }
   }
 
-  .tile__image {
+  &__image {
     display: block;
     max-width: 100%;
     height: auto;
     margin: 0 auto;
   }
 
-  .tile__header {
+  &__header {
     max-width: 100%;
-    padding: $gutter;
+    padding: 0 $gutter;
     margin: 0 auto $gutter;
   }
 
-  .tile__content {
+  &__content {
     padding: 0 $gutter;
   }
 
-  .tile__title {
+  &__title {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -97,69 +130,51 @@ $gutter: 18px;
     font-style: normal;
     font-weight: 700;
     color: #344053;
-    font-size: 15px;
+    font-size: 12px;
     margin: 0;
     text-align: center;
+    -webkit-font-smoothing: antialiased;
   }
 
-  .no-results {
-    margin: 0;
-    padding-left: $gutter;
-  }
-}
-
-.fancybox-container {
-  z-index: 100000;
-}
-
-.fancybox-close-small {
-  height: 50px;
-}
-
-.fancybox-content {
-  padding: 0;
-  min-width: 90vw;
-}
-
-.modal__image {
-  max-height: 70vh;
-  max-width: 100%;
-  margin: $gutter auto;
-  display: block;
-}
-
-.modal__title {
-  padding: 0 16px;
-  font-size: 22px;
-  line-height: 50px;
-  margin: 0;
-  color: #23282d;
-}
-
-.modal__grid {
-  display: grid;
-  grid-template-columns: 1fr 340px;
-  border-top: 1px solid #ddd;
-  background-color: #fff;
-}
-
-.modal__meta {
-  overflow: auto;
-  box-sizing: border-box;
-  margin-bottom: 0;
-  padding: 12px 16px 0;
-  height: 100%;
-  box-shadow: inset 0 4px 4px -4px rgba(0, 0, 0, 0.1);
-  border-bottom: 0;
-  border-left: 1px solid #ddd;
-  background: #f3f3f3;
-
-  .details {
+  &__button-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
+    margin: $gutter auto ($gutter / 2);
+  }
+
+  .spinner:not(.is-active) {
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    position: absolute;
+    white-space: nowrap;
+    height: 1px;
+    width: 1px;
     overflow: hidden;
-    float: none;
-    margin-bottom: 15px;
-    padding-bottom: 15px;
+  }
+
+  .spinner.is-active {
+    position: relative;
+    clip: auto;
+    clip-path: auto;
+    display: inline-block;
+    vertical-align: middle;
+    opacity: 0.7;
+    width: 20px;
+    height: 20px;
+    margin: 0 8px;
+  }
+
+  &.added {
+    .tile__wrapper {
+      border-color: $green;
+    }
+
+    .tile__image,
+    .tile__title {
+      opacity: 0.25;
+    }
   }
 }
 
