set results thumbnail height

--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -151,8 +151,9 @@ $breakpoint-xs: 500px;
   &__image {
     display: block;
     max-width: 100%;
-    height: auto;
+    height: 210px;
     margin: 0 auto;
+    object-fit: contain;
   }
 
   &__header {
